fix: address 4 review comments on PR #4196 ViewModel unit tests
- Extract IsEmailValid use case to avoid sun.misc.Unsafe in JVM tests;
  EnterVaultInfoViewModel delegates validateEmail to the new use case
- Encapsulate MutableStateFlow in VerifyTransactionViewModel behind
  private _uiState / public StateFlow to prevent external mutation
- Add .trim() to AddressEntryViewModel.setOutputAddress and matching
  whitespace-trim test
- Migrate all 8 new test files from kotlin.test assertions to Kotest
  (shouldBe / shouldBeTrue / shouldBeFalse / shouldBeNull etc.)
- Add kotest-assertions-core 5.9.1 dependency to app build.gradle.kts
- Rewrite dismissScanningWarning test to drive state via
  securityScannerService mocks rather than mutating uiState directly

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>